update swagger response messages
