# storage/api-docs/api-docs.json
@@ -34,16 +34,16 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "המשתמש התחבר בהצלחה"
+                        "description": "הפעולה התבצעה בהצלחה"
+                    },
+                    "400": {
+                        "description": "בקשה לא תקינה"
                     },
                     "404": {
-                        "description": "משתמש אינו קיים"
+                        "description": "משתמש אינו נמצא"
                     },
                     "500": {
-                        "description": "אירעה שגיאה בהתחברות"
-                    },
-                    "204": {
-                        "description": "אין תוכן"
+                        "description": "אירעה שגיאה"
                     }
                 }
             }
@@ -126,17 +126,41 @@
                 }
             }
         },
+        "/api/user": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get authenticated user",
+                "description": "Returns the authenticated user's details",
+                "operationId": "user",
+                "responses": {
+                    "200": {
+                        "description": "הפעולה התבצעה בהצלחה"
+                    },
+                    "401": {
+                        "description": "המשתמש לא מחובר"
+                    },
+                    "500": {
+                        "description": "אירעה שגיאה"
+                    }
+                }
+            }
+        },
         "/api/users/admins": {
             "get": {
                 "tags": [
                     "Users"
                 ],
-                "summary": "Retrieve all users",
-                "description": "Retrieve all users",
+                "summary": "Retrieve all admins",
+                "description": "Retrieve all admins",
                 "operationId": "index user",
                 "responses": {
                     "200": {
                         "description": "הפעולה התבצעה בהצלחה"
+                    },
+                    "500": {
+                        "description": "אירעה שגיאה"
                     }
                 }
             }
@@ -163,7 +187,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "הרשאה נוספה בהצלחה"
+                        "description": "הפעולה התבצעה בהצלחה"
                     },
                     "404": {
                         "description": "משתמש אינו נמצא"
@@ -197,13 +221,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "הרשאה נמחקה בהצלחה"
+                        "description": "הפעולה התבצעה בהצלחה"
                     },
                     "404": {
                         "description": "משתמש אינו נמצא"
                     },
                     "409": {
-                        "description": "למשתמש זה אין הרשאת מנהל מערכת"
+                        "description": "המשתמש אינו מנהל מערכת"
                     },
                     "500": {
                         "description": "אירעה שגיאה"
@@ -221,28 +245,7 @@
                 "operationId": "getUsers",
                 "responses": {
                     "200": {
-                        "description": "פעולה נמחקה בהצלחה"
-                    },
-                    "500": {
-                        "description": "אירעה שגיאה"
-                    }
-                }
-            }
-        },
-        "/api/user": {
-            "get": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Get authenticated user",
-                "description": "Returns the authenticated user's details",
-                "operationId": "user",
-                "responses": {
-                    "200": {
                         "description": "הפעולה התבצעה בהצלחה"
-                    },
-                    "404": {
-                        "description": "משתמש אינו נמצא"
                     },
                     "500": {
                         "description": "אירעה שגיאה"
@@ -310,7 +313,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "אתר נוצר בהצלחה"
+                        "description": "הפעולה התבצעה בהצלחה"
                     },
                     "500": {
                         "description": "אירעה שגיאה"
@@ -369,10 +372,10 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "אתר עודכן בהצלחה"
+                        "description": "הפעולה התבצעה בהצלחה"
                     },
                     "400": {
-                        "description": "הכנס לפחות שדה אחד לעדכון"
+                        "description": "בקשה לא תקינה"
                     },
                     "404": {
                         "description": "האתר לא נמצא"
@@ -403,7 +406,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "אתר נמחק בהצלחה"
+                        "description": "הפעולה התבצעה בהצלחה"
                     },
                     "404": {
                         "description": "אתר לא נמצא"
